@@ -1,3 +1,6 @@
+2002-11-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac:
+  - Workaround for missing InvalidOid definition
 2002-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/result.h, src/result.cxx:
   - Added AffectedRows() function requested by Peter Novodvorsky
